<resources>
    <string name="app_name">AryaBag</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_photo">美图</string>
    <string name="nav_delivery">喊他买</string>
    <string name="nav_game">磨人小游戏</string>
    <string name="nav_knowledge">生活小常识</string>
    <string name="nav_novel">小说</string>
    <string name="nav_video">牛人小视频</string>
    <string name="nav_fasion">潮流搭配</string>
    <string name="nav_entertainment">娱乐新资讯</string>
    <string name="nav_emergency">紧急求助</string>
    <string name="user_name">Arya</string>
    <string name="motto">巴黎的浪漫之夜会有的</string>
</resources>
