<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_photo"
        android:icon="@drawable/ic_photo2"
        android:title="@string/nav_photo" />
    <item
        android:id="@+id/nav_delivery"
        android:icon="@drawable/ic_delivery"
        android:title="@string/nav_delivery" />
    <item
        android:id="@+id/nav_game"
        android:icon="@drawable/ic_game"
        android:title="@string/nav_game" />
    <item
        android:id="@+id/nav_knowledge"
        android:icon="@drawable/ic_know"
        android:title="@string/nav_knowledge" />
    <item
        android:id="@+id/nav_novel"
        android:icon="@drawable/ic_novel"
        android:title="@string/nav_novel" />
    <item android:title="@string/nav_video"
        android:id="@+id/nav_video"
        android:icon="@drawable/ic_video" />
    <item android:title="@string/nav_fasion"
        android:id="@+id/nav_fasion"
        android:icon="@drawable/ic_beauty" />
    <item android:title="@string/nav_entertainment"
        android:id="@+id/nav_entertainment"
        android:icon="@drawable/ic_famous" />
    <item android:title="@string/nav_emergency"
        android:id="@+id/nav_emergency"
        android:icon="@drawable/ic_emergency2" />

</menu>
